test/errors/array_types_error/zs/packed_array_bitmask_error.zs
package packed_array_bitmask_error;

bitmask uint16 TestBitmask
{
    BLACK,
    WHITE
};

struct PackedArrayBitmaskError
{
    packed TestBitmask array[];
};
